# SPINNER

./: .readthedocs.yml  README.md
docs/: Makefile  conf.py  index.rst  install.rst
docs/examples/: examples.rst
docs/execution/: execution.rst
docs/outputs/: outputs.rst
docs/tags/: tags.rst
examples/Li2TiN2/: li2ti1n2.yaml  run.sh
examples/Li2TiN2/li2ti1n2/: potential
examples/Li2TiN2/src/: check_convergence_NNP.py  clean_amp2.py  ex_final.yaml  module_clean.py  module_corejob.py  module_input.py  module_post.py  module_pre.py  module_rdf.py  module_spacegroup.py  print_num_gen.py  simple_nn_feature.py  simple_nn_train.py  test.py
examples/Mg2SiO4/: mg2si1o4.yaml  run.sh
examples/Mg2SiO4/mg2si1o4/: input.yaml  potential
examples/Mg2SiO4/src/: csp_with_quality_monitoring.j  dat  iterative_loop.j  main.py  module_input.py  (+9 more)
lammps-vspinner/: log.lammps
lammps-vspinner/src/: log.lammps
randSpg-vspinner/: test.py
randSpg-vspinner/include/: elemInfoDatabase.h
randSpg-vspinner/python/: CMakeLists.txt  POSCAR  elemInfoDatabase.h  pyrandspg.cpp  randSpg.h  setup.py  tasks.py  test.py  test0.py
randSpg-vspinner/src/: randSpg.cpp
src/: INCAR  clean_amp2_final.py  copypotential.py  ex_input.yaml  main.py  module_corejob.py  module_input.py  module_lammps.py  module_post.py  module_pre.py  module_spacegroup.py  one_shot_calculation_final.py  one_shot_monitoring.py  read_input.py  run.py  sample_trainingset.py  sample_trainingset_final.py
src/amp2_normal/: INCAR0  module_relax.py
src/amp2_normal0/: INCAR0  module_amp2_input.py
version/: _version.py
(+20 files in other folders)
